fix: change titleH3 gap

--- a/src/components/layout/TitleH3/TitleH3.module.scss
+++ b/src/components/layout/TitleH3/TitleH3.module.scss
@@ -5,7 +5,7 @@
   position: relative;
   @include flexCol();
   flex-direction: column;
-  gap: 5px;
+  gap: 2px;
   padding-inline: 10%;
   margin-bottom: 12px;
 
